# eyl-launcher

./: CMakeLists.txt  Makefile  README.md
include/lnchr/: version.hpp  xdg.hpp
src/: CMakeLists.txt  lnchr.cpp  main.cpp  version.cpp.in  xdg-main.cpp  xdg.cpp
